TPLKEENLY-197 #resolve #comment Table atribute is not sopported on IE8

--- a/code/less/template.less
+++ b/code/less/template.less
@@ -1889,7 +1889,7 @@ body {
     .total-menu-container {
         width: 100%;
         height: 100%;
-        display: table;
+        display: block;
         .menu-items {
             background-color: @color-two;
             width: 50%;
